<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:stretchColumns="1">

    <TextView
        android:id="@+id/main_localization_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:text="@string/weather_city"/>

    <TextView
        android:id="@+id/main_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_coordinates"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/main_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_time"/>

        <TextView
            android:id="@+id/main_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_temperature"/>

        <TextView
            android:id="@+id/main_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_pressure"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/main_weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/weather_sunny"
        android:contentDescription="@string/weather_icon" />

    <TextView
        android:id="@+id/main_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weather_description" />
</LinearLayout>