<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="1.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primary"
        android:contentDescription="@string/menu_tab"
        app:tabSelectedTextColor="@color/on_background"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_location"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/tab_layout"
        android:maxHeight="48dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="@dimen/min_small"
        android:autoSizeMaxTextSize="@dimen/max_small"
        android:background="@drawable/rectangle_button_left"
        android:fontFamily="monospace"
        android:text="@string/menu_change_location"
        android:textColor="@color/on_primary"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3333"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_units"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/tab_layout"
        android:maxHeight="48dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="@dimen/min_small"
        android:autoSizeMaxTextSize="@dimen/max_small"
        android:background="@drawable/rectangle_button_center"
        android:fontFamily="monospace"
        android:text="@string/menu_change_units"
        android:textColor="@color/on_primary"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3333"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/change_location"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/tab_layout"
        android:maxHeight="48dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="@dimen/min_small"
        android:autoSizeMaxTextSize="@dimen/max_small"
        android:background="@drawable/rectangle_button_right"
        android:fontFamily="monospace"
        android:text="@string/menu_refresh"
        android:textColor="@color/on_primary"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3333"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/change_units"/>

</androidx.constraintlayout.widget.ConstraintLayout>