<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:tag="fragment_menu"
    android:paddingVertical="12dp"
    android:paddingHorizontal="24dp" >

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="@dimen/min_big"
        android:autoSizeMaxTextSize="@dimen/max_big"
        android:textAlignment="center"
        android:textColor="@color/on_background"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/menu_version"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="12dp"
        android:autoSizeMinTextSize="@dimen/min_small"
        android:autoSizeMaxTextSize="@dimen/max_small"
        android:autoSizeTextType="uniform"
        android:background="@drawable/rounded_surface"
        android:fontFamily="monospace"
        android:gravity="center"
        android:maxLines="1"
        android:paddingHorizontal="5dp"
        android:text="@string/app_version"
        android:textAlignment="center"
        android:textColor="@color/on_surface"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_title"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_surface"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1.0" >

        <Button
            android:id="@+id/menu_current_location"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="@dimen/max_small"
            android:autoSizeMinTextSize="@dimen/min_small"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_button"
            android:fontFamily="monospace"
            android:text="@string/menu_current_location"
            android:textAlignment="center"
            android:textColor="@color/on_primary"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.85" />

        <Space
            android:id="@+id/space1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_current_location"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.85" />

        <Button
            android:id="@+id/menu_input_location_by_coords"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="@dimen/max_small"
            android:autoSizeMinTextSize="@dimen/min_small"
            android:background="@drawable/rounded_button"
            android:fontFamily="monospace"
            android:text="@string/menu_input_coordinates"
            android:textAlignment="center"
            android:textColor="@color/on_primary"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space1"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.85" />

        <Space
            android:id="@+id/space2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_input_location_by_coords"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.85" />

        <Button
            android:id="@+id/menu_input_location_by_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="monospace"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="@dimen/max_small"
            android:autoSizeMinTextSize="@dimen/min_small"
            android:textAlignment="center"
            android:textColor="@color/on_primary"
            android:text="@string/menu_input_city_name"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space2"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.85" />

        <Space
            android:id="@+id/space3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_input_location_by_name"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.85" />

        <Spinner
            android:id="@+id/menu_default_locations"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/primary"
            android:fontFamily="monospace"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="@dimen/max_small"
            android:autoSizeMinTextSize="@dimen/min_small"
            android:tooltipText="Choose a location"
            android:textAlignment="center"
            android:textColor="@color/on_primary"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space3"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.85" />

        <Space
            android:id="@+id/space4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_default_locations"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.85" />

        <Spinner
            android:id="@+id/menu_locations_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="@dimen/max_small"
            android:autoSizeMinTextSize="@dimen/min_small"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/primary"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="@color/on_primary"
            android:tooltipText="Check your browser history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space4"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>